<005> Fix: Ensured NavBar holds layout space and doesn't overlap content

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -112,3 +112,7 @@ nav {
   position: relative;
   background-color: #121212;
 }
+body {
+  padding-top: var(--navbar-height);
+}
+
